[gd_scene load_steps=8 format=3 uid="uid://dlm1waxd36ccm"]

[ext_resource type="Script" uid="uid://ce3udxwop1ctg" path="res://scenes/pages/campaign_page.gd" id="1_n4whh"]
[ext_resource type="PackedScene" uid="uid://bksmpv1hw7cqu" path="res://scenes/components/map_grid/map_grid.tscn" id="2_cltbf"]
[ext_resource type="Script" uid="uid://bgltupsvw2gv5" path="res://scenes/components/utils/pawn_selection_list.gd" id="3_hatcx"]
[ext_resource type="Script" uid="uid://ddqv0ui6wdlvi" path="res://resources/models/basic_info.gd" id="4_hog5k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n4whh"]

[sub_resource type="Resource" id="Resource_gpepu"]
script = ExtResource("4_hog5k")
display_name = "Kisser"
icon = "üòò"
metadata/_custom_type_script = "uid://ddqv0ui6wdlvi"

[sub_resource type="Resource" id="Resource_kjn0d"]
script = ExtResource("4_hog5k")
display_name = "Skeleton"
icon = "üíÄ"
metadata/_custom_type_script = "uid://ddqv0ui6wdlvi"

[node name="CampaignPage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n4whh")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ButtonSettings" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(72, 72)
layout_mode = 2
text = "‚öôÔ∏è"

[node name="Title" type="Label" parent="Panel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "[CampaignName]"
horizontal_alignment = 1

[node name="VSeparator" type="VSeparator" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 72
theme_override_styles/separator = SubResource("StyleBoxEmpty_n4whh")

[node name="ReferenceRect" type="ReferenceRect" parent="Panel/VBoxContainer/HBoxContainer/VSeparator"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
border_color = Color(0.54, 0.54, 0.54, 1)
border_width = 2.0

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 48

[node name="Content" type="Control" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="Panel/VBoxContainer/Content"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/Content/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/VBoxContainer/Content/Panel/VBoxContainer"]
layout_mode = 2

[node name="ReferenceRect2" type="ReferenceRect" parent="Panel/VBoxContainer/Content/Panel/VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
border_color = Color(0.385492, 0.385493, 0.385493, 1)
border_width = 2.0

[node name="ButtonDecrementGridWidth" type="Button" parent="Panel/VBoxContainer/Content/Panel/VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_vertical = 6
text = "-"

[node name="ReferenceRect" type="ReferenceRect" parent="Panel/VBoxContainer/Content/Panel/VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
border_color = Color(0.385492, 0.385493, 0.385493, 1)
border_width = 2.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/Content/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ButtonIncrementGridHeight" type="Button" parent="Panel/VBoxContainer/Content/Panel/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "+"

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer/Content/Panel/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MapGrid" parent="Panel/VBoxContainer/Content/Panel/VBoxContainer/VBoxContainer/ScrollContainer" instance=ExtResource("2_cltbf")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="ButtonDecrementGridHeight" type="Button" parent="Panel/VBoxContainer/Content/Panel/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "-"

[node name="VBoxContainer3" type="VBoxContainer" parent="Panel/VBoxContainer/Content/Panel/VBoxContainer"]
layout_mode = 2

[node name="ReferenceRect2" type="ReferenceRect" parent="Panel/VBoxContainer/Content/Panel/VBoxContainer/VBoxContainer3"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
border_color = Color(0.385492, 0.385493, 0.385493, 1)
border_width = 2.0

[node name="ButtonIncrementGridWidth" type="Button" parent="Panel/VBoxContainer/Content/Panel/VBoxContainer/VBoxContainer3"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_vertical = 6
text = "+
"

[node name="ReferenceRect" type="ReferenceRect" parent="Panel/VBoxContainer/Content/Panel/VBoxContainer/VBoxContainer3"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
border_color = Color(0.385492, 0.385493, 0.385493, 1)
border_width = 2.0

[node name="ButtonStatus" type="Button" parent="Panel/VBoxContainer/Content"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -80.0
grow_horizontal = 0
grow_vertical = 0
text = "üë§"

[node name="PawnSelection" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="PawnSelection"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="PawnSelection/Panel"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="ItemList" type="ItemList" parent="PawnSelection/Panel/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
item_count = 2
item_0/text = "üòò - Kisser"
item_1/text = "üíÄ - Skeleton"
script = ExtResource("3_hatcx")
_list = Array[ExtResource("4_hog5k")]([SubResource("Resource_gpepu"), SubResource("Resource_kjn0d")])

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="button_down" from="Panel/VBoxContainer/HBoxContainer/ButtonSettings" to="." method="_on_button_settings_button_down"]
[connection signal="button_down" from="Panel/VBoxContainer/Content/Panel/VBoxContainer/VBoxContainer2/ButtonDecrementGridWidth" to="." method="_on_button_decrement_grid_width_button_down"]
[connection signal="button_down" from="Panel/VBoxContainer/Content/Panel/VBoxContainer/VBoxContainer/ButtonIncrementGridHeight" to="." method="_on_button_increment_grid_height_button_down"]
[connection signal="on_grid_button_pressed" from="Panel/VBoxContainer/Content/Panel/VBoxContainer/VBoxContainer/ScrollContainer/MapGrid" to="." method="_on_map_grid_on_grid_button_pressed"]
[connection signal="button_down" from="Panel/VBoxContainer/Content/Panel/VBoxContainer/VBoxContainer/ButtonDecrementGridHeight" to="." method="_on_button_decrement_grid_height_button_down"]
[connection signal="button_down" from="Panel/VBoxContainer/Content/Panel/VBoxContainer/VBoxContainer3/ButtonIncrementGridWidth" to="." method="_on_button_increment_grid_width_button_down"]
[connection signal="property_list_changed" from="HTTPRequest" to="." method="_on_http_request_property_list_changed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
